@@ -3,3 +3,4 @@ Archived:
 
 Restructured code to be more modular by making multiple modules and optimized button creation
 Fixed bug that allowed to enter shop early
+Added cheats menu (low functionality)
